a few changes to make it prettier

--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -68,3 +68,13 @@
     font-size: 13px;
   }
 }
+
+.tick {
+  font-size: 15pt;
+}
+
+.axisText {
+  font-size:35pt;
+  text-align: center;
+  text-transform: capitalize;
+}
